crates/ars-components/src/utility/toggle/snapshots/ars_components__utility__toggle__tests__toggle_indicator_on.snap
---
source: crates/ars-components/src/utility/toggle.rs
expression: "snapshot_attrs(&on.connect(&|_| {}).indicator_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "indicator",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "toggle",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "on",
            ),
        ),
    ],
    styles: [],
}
