crates/ars-components/src/utility/toggle/snapshots/ars_components__utility__toggle__tests__toggle_root_on.snap
---
source: crates/ars-components/src/utility/toggle.rs
expression: "snapshot_attrs(&on.connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-pressed",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "toggle",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "on",
            ),
        ),
        (
            Aria(
                Pressed,
            ),
            String(
                "true",
            ),
        ),
        (
            Id,
            String(
                "bold",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
